--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-  "functions": {
-    "dist/src/index.js": {
-      "maxDuration": 60
-    }
-  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/dist/src/index.js"
+      "destination": "/api"
     }
   ]
 }
