--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api/index"
+  "functions": {
+    "api/index.ts": {
+      "maxDuration": 60
     }
-  ]
+  }
 }
