--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "rootDir": ".",
     "types": ["node"]
   },
-  "include": ["src/**/*", "api/**/*"],
+  "include": ["src/**/*", "api/**/*", "index.ts"],
   "exclude": ["node_modules"]
 }
